Temporarily remove nsys profile

--- a/.buildkite/pipeline.yml
+++ b/.buildkite/pipeline.yml
@@ -794,7 +794,7 @@ steps:
         key: "gpu_implicit_barowave_wrt_h_elem"
         command:
           - "julia --project -e 'using CUDA; CUDA.versioninfo()'"
-          - "nsys profile --trace=nvtx,cuda --output=gpu_implicit_barowave_wrt_h_elem/report julia --color=yes --project=examples perf/benchmark_dump.jl --job_id gpu_implicit_barowave_wrt_h_elem --z_elem 25 --h_elem 12 --initial_condition DryBaroclinicWave --t_end 1mins --dt 1secs --dt_save_to_sol Inf --dt_save_to_disk Inf"
+          - "julia --color=yes --project=examples perf/benchmark_dump.jl --job_id gpu_implicit_barowave_wrt_h_elem --z_elem 25 --h_elem 12 --initial_condition DryBaroclinicWave --t_end 1mins --dt 1secs --dt_save_to_sol Inf --dt_save_to_disk Inf"
         artifact_paths: "gpu_implicit_barowave_wrt_h_elem/*"
         agents:
           slurm_gpus: 1
@@ -802,7 +802,7 @@ steps:
       - label: "Perf: GPU implicit baro wave"
         command:
           - "julia --project -e 'using CUDA; CUDA.versioninfo()'"
-          - "nsys profile --trace=nvtx,cuda --output=gpu_implicit_barowave/report julia --color=yes --project=examples perf/benchmark_step.jl --job_id gpu_implicit_barowave --z_elem 25 --h_elem 12 --initial_condition DryBaroclinicWave --t_end 1mins --dt 1secs --dt_save_to_sol Inf --dt_save_to_disk Inf"
+          - "julia --color=yes --project=examples perf/benchmark_step.jl --job_id gpu_implicit_barowave --z_elem 25 --h_elem 12 --initial_condition DryBaroclinicWave --t_end 1mins --dt 1secs --dt_save_to_sol Inf --dt_save_to_disk Inf"
         artifact_paths: "gpu_implicit_barowave/*"
         agents:
           slurm_gpus: 1
@@ -810,14 +810,14 @@ steps:
       - label: "Perf: GPU implicit baro wave moist"
         command:
           - "julia --project -e 'using CUDA; CUDA.versioninfo()'"
-          - "nsys profile --trace=nvtx,cuda --output=gpu_implicit_barowave_moist/report julia --color=yes --project=examples perf/benchmark_step.jl --job_id gpu_implicit_barowave_moist --z_elem 25 --h_elem 12 --initial_condition MoistBaroclinicWave --t_end 1mins --dt 1secs --dt_save_to_sol Inf --dt_save_to_disk Inf --moist equil --precip 0M --apply_limiter false"
+          - "julia --color=yes --project=examples perf/benchmark_step.jl --job_id gpu_implicit_barowave_moist --z_elem 25 --h_elem 12 --initial_condition MoistBaroclinicWave --t_end 1mins --dt 1secs --dt_save_to_sol Inf --dt_save_to_disk Inf --moist equil --precip 0M --apply_limiter false"
         artifact_paths: "gpu_implicit_barowave_moist/*"
         soft_fail: true
         agents:
           slurm_gpus: 1
 
       - label: "Perf: CPU implicit baro wave"
-        command: "nsys profile --trace=nvtx,cuda --output=cpu_implicit_barowave/report julia --color=yes --project=examples perf/benchmark_step.jl --job_id cpu_implicit_barowave --z_elem 25 --h_elem 12 --initial_condition DryBaroclinicWave --t_end 1mins --dt 1secs --dt_save_to_sol Inf --dt_save_to_disk Inf"
+        command: "julia --color=yes --project=examples perf/benchmark_step.jl --job_id cpu_implicit_barowave --z_elem 25 --h_elem 12 --initial_condition DryBaroclinicWave --t_end 1mins --dt 1secs --dt_save_to_sol Inf --dt_save_to_disk Inf"
         artifact_paths: "cpu_implicit_barowave/*"
 
 
