--- a/.buildkite/pipeline.yml
+++ b/.buildkite/pipeline.yml
@@ -460,15 +460,28 @@ steps:
         artifact_paths: "diagnostic_edmfx_rico_box/*"
         agents:
           slurm_mem: 20GB
-
+      
       - label: ":genie: Diagnostic EDMFX aquaplanet"
         command: >
           julia --color=yes --project=examples examples/hybrid/driver.jl --job_id diagnostic_edmfx_aquaplanet
           --vert_diff true --surface_setup DefaultExchangeCoefficients --rad gray
-          --turbconv diagnostic_edmfx --prognostic_tke true --edmfx_entr_detr true
+          --turbconv diagnostic_edmfx --edmfx_entr_detr true
           --moist equil --precip_model 0M
           --dt 400secs --t_end 1days --dt_save_to_disk 12hours
         artifact_paths: "diagnostic_edmfx_aquaplanet/*"
+        soft_fail: true
+        agents:
+          slurm_mem: 20GB
+
+      - label: ":genie: Diagnostic EDMFX aquaplanet with TKE"
+        command: >
+          julia --color=yes --project=examples examples/hybrid/driver.jl --job_id diagnostic_edmfx_aquaplanet_tke
+          --vert_diff true --surface_setup DefaultExchangeCoefficients --rad gray
+          --turbconv diagnostic_edmfx --prognostic_tke true --edmfx_upwinding first_order --edmfx_entr_detr true
+          --moist equil --precip_model 0M
+          --dt 400secs --t_end 1hours --dt_save_to_disk 400secs
+        artifact_paths: "diagnostic_edmfx_aquaplanet_tke/*"
+        soft_fail: true
         agents:
           slurm_mem: 20GB
 
@@ -888,7 +901,7 @@ steps:
           slurm_mem: 20GB
 
       - label: ":fire: Flame graph: perf target (diagnostic edmfx)"
-        command: "julia --color=yes --project=perf perf/flame.jl --job_id flame_perf_target_diagnostic_edmfx --target_job diagnostic_edmfx_aquaplanet"
+        command: "julia --color=yes --project=perf perf/flame.jl --job_id flame_perf_target_diagnostic_edmfx --target_job diagnostic_edmfx_aquaplanet_tke"
         artifact_paths: "flame_perf_target_diagnostic_edmfx/*"
         agents:
           slurm_mem: 20GB
