--- a/.buildkite/pipeline.yml
+++ b/.buildkite/pipeline.yml
@@ -450,7 +450,7 @@ steps:
         command: >
           julia --color=yes --project=examples examples/hybrid/driver.jl --job_id diagnostic_edmfx_aquaplanet
           --vert_diff true --surface_setup DefaultExchangeCoefficients --rad gray
-          --turbconv diagnostic_edmfx --edmfx_entr_detr true
+          --turbconv diagnostic_edmfx --prognostic_tke true --edmfx_entr_detr true
           --moist equil --precip_model 0M
           --dt 400secs --t_end 1days --dt_save_to_disk 12hours
         artifact_paths: "diagnostic_edmfx_aquaplanet/*"
