--- a/.buildkite/pipeline.yml
+++ b/.buildkite/pipeline.yml
@@ -839,7 +839,7 @@ steps:
           --dt 400secs --t_end 1hours --dt_save_to_disk 400secs
         artifact_paths: "gpu_diagnostic_edmfx_aquaplanet/*"
         agents:
-          slurm_mem: 20GB
+          slurm_gpus: 1
 
       - label: "Perf: CPU implicit baro wave"
         command: "julia --color=yes --project=examples perf/benchmark_step.jl --job_id cpu_implicit_barowave --z_elem 25 --h_elem 12 --initial_condition DryBaroclinicWave --t_end 1mins --dt 1secs --dt_save_to_sol Inf --dt_save_to_disk Inf"
