--- a/.buildkite/longruns/pipeline.yml
+++ b/.buildkite/longruns/pipeline.yml
@@ -68,3 +68,16 @@ steps:
           slurm_exclusive: true
           slurm_ntasks: 256
           slurm_mem: 0GB
+      
+      - label: ":computer: topography+edmf+up-params test" 
+        command:
+          - mpiexec julia --project=examples examples/hybrid/driver.jl --vert_diff true --surface_setup DefaultMoninObukhov --moist equil --rad clearsky --precip_model 0M --turbconv diagnostic_edmfx --edmfx_entr_detr true --z_elem 35 --dz_bottom 50 --h_elem 12 --kappa_4 8e16 --rayleigh_sponge true --alpha_rayleigh_uh 0 --dt 200secs --t_end 365days --job_id aquaplanet_equil_clearsky_diagedmf_ft64_earth --dt_save_to_sol Inf --dt_save_to_disk 10days --FLOAT_TYPE Float64 --apply_limiter false --topography Earth --topo_smoothing true --use_reference_state false
+          - julia --color=yes --project=examples post_processing/remap/remap_pipeline.jl --data_dir longrun_aquaplanet_rhoe_equil_target_diag-edmfx_topography --out_dir longrun_aquaplanet_rhoe_equil_target_diag-edmfx_topography
+        artifact_paths: "longrun_aquaplanet_rhoe_equil_target_diag-edmfx_topography/*"
+        env:
+          CLIMACORE_DISTRIBUTED: "MPI"
+        agents:
+          slurm_partition: expansion
+          slurm_exclusive: true
+          slurm_ntasks: 128
+          slurm_mem: 384GB
