--- a/.buildkite/pipeline.yml
+++ b/.buildkite/pipeline.yml
@@ -806,35 +806,35 @@ steps:
   - group: "GPU"
     steps:
 
-      - label: "GPU: GPU implicit baro wave"
-        key: "gpu_implicit_barowave_ref"
+      - label: "GPU: baroclinic wave"
+        key: "gpu_baroclinic_wave_rhoe"
         command:
           - "julia --project -e 'using CUDA; CUDA.versioninfo()'"
-          - "julia --color=yes --project=examples examples/hybrid/driver.jl --job_id gpu_implicit_barowave_ref --dt 580secs --t_end 10days --dt_save_to_disk 2days --initial_condition DryBaroclinicWave --dt_save_to_sol Inf"
-        artifact_paths: "gpu_implicit_barowave_ref/*"
+          - "julia --color=yes --project=examples examples/hybrid/driver.jl --job_id gpu_baroclinic_wave_rhoe --dt 580secs --t_end 10days --dt_save_to_disk 2days --initial_condition DryBaroclinicWave --dt_save_to_sol Inf"
+        artifact_paths: "gpu_baroclinic_wave_rhoe/*"
         agents:
           slurm_gpus: 1
 
-      - label: "GPU: compare with CPU"
-        command: "julia --color=yes --project=examples post_processing/compare_outputs.jl --output_folder_1 sphere_baroclinic_wave_rhoe/ --output_folder_2 gpu_implicit_barowave_ref --t_end 10days --compare_state false --compare_diagnostics false"
+      - label: "GPU: compare BW with CPU"
+        command: "julia --color=yes --project=examples post_processing/compare_outputs.jl --output_folder_1 sphere_baroclinic_wave_rhoe/ --output_folder_2 gpu_baroclinic_wave_rhoe/ --t_end 10days --compare_state false --compare_diagnostics false"
         depends_on:
           - "sphere_baroclinic_wave_rhoe"
-          - "gpu_implicit_barowave_ref"
+          - "gpu_baroclinic_wave_rhoe"
 
-      - label: "GPU: implicit HS"
-        key: "gpu_implicit_dry_hs_ref"
+      - label: "GPU: HS (ρe) hightop"
+        key: "gpu_held_suarez_rhoe_hightop"
         command:
           - "julia --project -e 'using CUDA; CUDA.versioninfo()'"
-          - "julia --color=yes --project=examples examples/hybrid/driver.jl --z_max 45e3 --z_elem 25 --dz_bottom 300 --forcing held_suarez --job_id gpu_implicit_dry_hs_ref --dt 500secs --t_end 8days --dt_save_to_disk 4days"
-        artifact_paths: "gpu_implicit_dry_hs_ref/*"
+          - "julia --color=yes --project=examples examples/hybrid/driver.jl --z_max 45e3 --z_elem 25 --dz_bottom 300 --forcing held_suarez --job_id gpu_held_suarez_rhoe_hightop --dt 500secs --t_end 8days --dt_save_to_disk 4days"
+        artifact_paths: "gpu_held_suarez_rhoe_hightop/*"
         agents:
           slurm_gpus: 1
 
-      - label: "GPU: compare dry with CPU"
-        command: "julia --color=yes --project=examples post_processing/compare_outputs.jl --output_folder_1 sphere_held_suarez_rhoe_hightop/ --output_folder_2 gpu_implicit_dry_hs_ref --t_end 8days --compare_state false --compare_diagnostics false"
+      - label: "GPU: compare HS (ρe) hightop with CPU"
+        command: "julia --color=yes --project=examples post_processing/compare_outputs.jl --output_folder_1 sphere_held_suarez_rhoe_hightop/ --output_folder_2 gpu_held_suarez_rhoe_hightop/ --t_end 8days --compare_state false --compare_diagnostics false"
         depends_on:
           - "sphere_held_suarez_rhoe_hightop"
-          - "gpu_implicit_dry_hs_ref"
+          - "gpu_held_suarez_rhoe_hightop"
 
   - group: "GPU Performance"
     steps:
