Make TKE initial condition dependent on prognostic_tke

--- a/.buildkite/pipeline.yml
+++ b/.buildkite/pipeline.yml
@@ -444,7 +444,7 @@ steps:
         command: >
           julia --color=yes --project=examples examples/hybrid/driver.jl --job_id diagnostic_edmfx_bomex_box
           --initial_condition Bomex --subsidence Bomex --edmf_coriolis Bomex --ls_adv Bomex --surface_setup Bomex
-          --turbconv diagnostic_edmfx --edmfx_entr_detr true --edmfx_sgs_flux true
+          --turbconv diagnostic_edmfx --prognostic_tke true --edmfx_upwinding first_order --edmfx_entr_detr true --edmfx_sgs_flux true
           --moist equil
           --config box --hyperdiff true --kappa_4 1e12
           --x_max 1e5 --y_max 1e5 --x_elem 2 --y_elem 2 --z_elem 60 --z_max 3e3 --z_stretch false
@@ -457,11 +457,11 @@ steps:
         command: >
           julia --color=yes --project=examples examples/hybrid/driver.jl --job_id diagnostic_edmfx_dycoms_rf01_box
           --initial_condition DYCOMS_RF01 --subsidence DYCOMS --edmf_coriolis DYCOMS_RF01 --rad DYCOMS_RF01 --surface_setup DYCOMS_RF01
-          --turbconv diagnostic_edmfx --edmfx_entr_detr true --edmfx_sgs_flux true
+          --turbconv diagnostic_edmfx --prognostic_tke true --edmfx_upwinding first_order --edmfx_entr_detr true --edmfx_sgs_flux true
           --moist equil
           --config box --hyperdiff true --kappa_4 1e12
           --x_max 1e5 --y_max 1e5 --x_elem 2 --y_elem 2 --z_elem 30 --z_max 1500 --z_stretch false
-          --dt 6secs --t_end 4hours --dt_save_to_disk 2mins
+          --dt 10secs --t_end 4hours --dt_save_to_disk 2mins
         artifact_paths: "diagnostic_edmfx_dycoms_rf01_box/*"
         agents:
           slurm_mem: 20GB
@@ -470,7 +470,7 @@ steps:
         command: >
           julia --color=yes --project=examples examples/hybrid/driver.jl --job_id diagnostic_edmfx_rico_box
           --initial_condition Rico --subsidence Rico --ls_adv Rico --surface_setup Rico
-          --turbconv diagnostic_edmfx --edmfx_entr_detr true --edmfx_sgs_flux true
+          --turbconv diagnostic_edmfx --prognostic_tke true --edmfx_upwinding first_order --edmfx_entr_detr true --edmfx_sgs_flux true
           --moist equil
           --config box --hyperdiff true --kappa_4 1e12
           --x_max 1e5 --y_max 1e5 --x_elem 2 --y_elem 2 --z_elem 100 --z_max 4e3 --z_stretch false
@@ -495,7 +495,7 @@ steps:
         command: >
           julia --color=yes --project=examples examples/hybrid/driver.jl --job_id diagnostic_edmfx_aquaplanet_tke
           --vert_diff true --surface_setup DefaultExchangeCoefficients --rad gray
-          --turbconv diagnostic_edmfx --prognostic_tke true --edmfx_upwinding first_order --edmfx_entr_detr true
+          --turbconv diagnostic_edmfx --prognostic_tke true --edmfx_upwinding first_order --edmfx_entr_detr true --edmfx_sgs_flux true
           --moist equil --precip_model 0M
           --dt 100secs --t_end 3hours --dt_save_to_disk 600secs
         artifact_paths: "diagnostic_edmfx_aquaplanet_tke/*"
